[package]
name = "pico"
version = "0.1.0"
authors = ["Stacy J. Prowell <sprowell@gmail.com>"]
publish = false
license = "BSD-2-Clause"
readme = "README.md"
homepage = "http://mons-pico.github.io"
repository = "https://github.com/mons-pico/rpico"
categories = [ "crates.io/category_slugs", "encoding" ]

[dependencies]
md5 = "0.3.5"
clap = "~2.26"

[lib]
name = "pico"
path = "src/lib.rs"

[[bin]]
name = "picotest"
path = "src/main.rs"
